# allegiance-and-influence

./: README.md
backend/: .langchain.db  Makefile  pyproject.toml
backend/htw/: config.py  firebase.py  graph.py  llm.py  summarize.py
backend/htw/agent/: agent.py  builder.py
backend/notebooks/: .langchain.db  langgraph.ipynb
backend/scripts/: .langchain.db  launch.py  run.py
frontend/: .eslintrc.json  .gitignore  README.md  package.json
frontend/app/: characters.json  characters.ts  endgame.tsx  firebase.ts  forcegraph.tsx  globals.css  graph.module.css  layout.tsx  page.module.css  page.tsx  panel.module.css  panel.tsx  round.module.css  round.tsx  teamColor.ts  utils.ts  welcome.module.css  welcome.tsx
gameplay/: characters.csv  characters.json
gameplay/boards/: boards.txt
