[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "htw" },
]

[tool.poetry.dependencies]
python = "^3.9"
langchain-anthropic = "^0.2.1"
langgraph = "^0.2.23"
langsmith = "^0.1.125"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langgraph-checkpoint = "^1.0.10"
langgraph-checkpoint-sqlite = "^1.0.3"
langchain-openai = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
ruff = "^0.2.0"
vulture = "^2.9"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
exclude = [
  "notebooks/",
  "scripts/",
]
warn_unused_ignores = true
local_partial_types = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.ruff]
select = ["E", "F", "I"]
ignore = [
  # E203: whitespace before ':'
  "E203",
  # E501: allow long lines, enforce line length with ruff
  "E501",
  # E731: do not assign a lambda expression, use a def
  "E731",
  # N803: argument name should be lowercase
  "N803",
  # N806: variable in function should be lowercase
  "N806",
  # N812: lowercase imported as non-lowercase
  "N812",
]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["mlcore_web", "tests"]